# Scanner

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro  test.jks
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/res/layout-land/: activity_scanner.xml
bankcard/: .gitignore  build.gradle
bankcard/src/main/: AndroidManifest.xml
baseocr/: build.gradle
baseocr/src/main/: AndroidManifest.xml
drivinglicense/: bintray.gradle  build.gradle
drivinglicense/src/main/: AndroidManifest.xml
facelandmark/: build.gradle
facelandmark/src/main/: AndroidManifest.xml
idcard/: build.gradle
idcard/src/main/: AndroidManifest.xml
idcard2/: bintray.gradle  build.gradle
idcard2/src/main/: AndroidManifest.xml
lib/: build.gradle  proguard-rules.pro
lib/src/main/: AndroidManifest.xml
licenseplate/: .gitignore  CMakeLists.txt  build.gradle
licenseplate/src/main/: AndroidManifest.xml
licenseplate/src/main/java/com/shouzhong/licenseplate/: LicensePlateUtils.java  PlateRecognition.java
licenseplate/src/main/jni/: javaWarpper.cpp
licenseplate/src/main/jni/include/: Pipeline.h  Recognizer.h
licenseplate/src/main/jni/src/: Pipeline.cpp  PlateDetection.cpp
licenseplate/src/main/res/values/: strings.xml
licenseplate2/: build.gradle
licenseplate2/src/main/: AndroidManifest.xml
nsfw/: build.gradle
nsfw/src/main/: AndroidManifest.xml
text/: build.gradle
text/src/main/: AndroidManifest.xml
zbar/: build.gradle
zbar/src/main/: AndroidManifest.xml
(+49 files in other folders)
